Update header name and paragraph in index.html
Changed the name in the header from Jie Sun to Yuming Jiang and modified the paragraph content.

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <title>Jie Sun - Personal Website</title>
 </head>
 <body>
-  <h1>Hello, I'm Jie Sun 👋</h1>
+  <h1>Hello, I'm Yuming Jiang👋</h1>
   <p>Welcome to my personal website!</p>
-  <p>This site is built using GitHub Pages.</p>
+  <p>.</p>
 </body>
 </html>
