Update title in index.html to reflect new owner

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8" />
-  <title>Jie Sun - Personal Website</title>
+  <title>Yuming Jiang - Personal Website</title>
 </head>
 <body>
   <h1>Hello, I'm Yuming Jiang👋</h1>
