Refactor index.html to use HTML instead of markdown
Removed markdown formatting and updated content structure.

--- a/index.html
+++ b/index.html
@@ -1,46 +1,35 @@
----
-layout: default
-title: Home
----
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <title>Yuming Jiang</title>
+</head>
+<body>
+  <h1>Yuming Jiang (江昱明)</h1>
 
-# Yuming Jiang(江昱明)
+  <p><strong>Mass spectrometry · Multi-omics · AI agents · Automated science</strong></p>
 
-**Mass spectrometry · Multi-omics · AI agents · Automated science**
+  <p>
+    Welcome! I work on high-throughput proteomics and metabolomics,
+    mass-spectrometry method development, and AI-agent systems for automated data analysis.
+  </p>
 
-Welcome! I work on high-throughput proteomics and metabolomics,  
-mass-spectrometry method development, and AI-agent systems for automated data analysis.
+  <h2>Research Interests</h2>
+  <ul>
+    <li>High-throughput mass spectrometry and multi-omics screening</li>
+    <li>Automated sample preparation and LC-MS / direct infusion workflows</li>
+    <li>AI agents and “AI Scientist” systems for proteomics &amp; metabolomics</li>
+    <li>Integration of large-scale drug response data with biological interpretation</li>
+  </ul>
 
----
+  <h2>News</h2>
+  <ul>
+    <li><em>2025</em> — Building AI-assisted multi-omics analysis and interpretation agents</li>
+  </ul>
 
-## 🔗 Navigation
-
-[Home](/) · [About](/about) · [Research](/research) · [Projects](/projects) · [Publications](/publications) · [Contact](/contact)
-
----
-
-## 🧠 Research Interests
-
-- High-throughput mass spectrometry and multi-omics screening  
-- Automated sample preparation and LC-MS / direct infusion workflows  
-- AI agents and “AI Scientist” systems for proteomics & metabolomics  
-- Integration of large-scale drug response data with biological interpretation  
-
----
-
-## 🌟 Highlights
-
-- Developed automated multi-omics pipelines combining robotics and advanced MS
-- Built custom software (e.g. **ZoDIAq**, **DImeta**) for large-scale data analysis
-- Using LLM-based agents to automate QC, statistics, and literature-based interpretation
-
----
-
-## 📰 News
-
-- *2025* — Building AI-assisted multi-omics analysis and interpretation agents  
-
----
-
-## 📬 Quick Contact
-
-For collaboration or questions, please see the [Contact](/contact) page.
+  <h2>Contact</h2>
+  <p>
+    For collaboration or questions, please see the Contact page (coming soon).
+  </p>
+</body>
+</html>
